Import of DAMS/Bloomd-Client-0.12 from CPAN.
gitpan-cpan-distribution: Bloomd-Client
gitpan-cpan-version:      0.12
gitpan-cpan-path:         DAMS/Bloomd-Client-0.12.tar.gz
gitpan-cpan-author:       DAMS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -4,8 +4,9 @@ author:
   - "Damien \"dams\" Krotkine"
 build_requires:
   Module::Build: 0.3601
-  Test::Most: 0
-  Test::Pretty: 0
+  Test::Exception: 0
+  Test::More: 0
+  Test::TCP: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.30
   Module::Build: 0.3601
@@ -19,10 +20,15 @@ name: Bloomd-Client
 provides:
   Bloomd::Client:
     file: lib/Bloomd/Client.pm
-    version: 0.11
+    version: 0.12
 requires:
+  Config: 0
+  IO::Socket::INET: 0
+  List::MoreUtils: 0
+  Method::Signatures: 0
   Moo: 0
+  autobox::Core: 0
   namespace::autoclean: 0
 resources:
   repository: git://github.com/dams/Bloomd-Client.git
-version: 0.11
+version: 0.12
