--- a/dist.ini
+++ b/dist.ini
@@ -33,12 +33,17 @@ filenames = Makefile.PL
 [Prereqs]
 Moo = 0
 namespace::autoclean = 0
+Method::Signatures = 0
+autobox::Core = 0
+List::MoreUtils = 0
+IO::Socket::INET = 0
+Config = 0
 
 ; -- test dependencies
 [Prereqs / TestRequires]
-Test::Most = 0
-Test::Pretty = 0
-
+Test::More = 0
+Test::Exception = 0
+Test::TCP = 0
 
 ; -- munge files
 [PkgVersion]
