--- a/META.yml
+++ b/META.yml
@@ -11,7 +11,7 @@ configure_requires:
   ExtUtils::MakeMaker: 6.30
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300030, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300034, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -20,7 +20,7 @@ name: Bloomd-Client
 provides:
   Bloomd::Client:
     file: lib/Bloomd/Client.pm
-    version: 0.14
+    version: 0.15
 requires:
   Config: 0
   IO::Socket::INET: 0
@@ -28,5 +28,6 @@ requires:
   Method::Signatures: 0
   Moo: 0
 resources:
+  bugtracker: https://github.com/dams/Bloomd-Client/issues
   repository: git://github.com/dams/Bloomd-Client.git
-version: 0.14
+version: 0.15
