--- a/META.yml
+++ b/META.yml
@@ -23,7 +23,7 @@ name: Bloomd-Client
 provides:
   Bloomd::Client:
     file: lib/Bloomd/Client.pm
-    version: 0.26
+    version: 0.27
 requires:
   Config: 0
   IO::Socket::INET: 0
@@ -32,5 +32,6 @@ requires:
   Type::Tiny: 0.026
   perl: v5.10.0
 resources:
+  bugtracker: https://github.com/dams/Bloomd-Client/issues
   repository: git://github.com/dams/Bloomd-Client.git
-version: 0.26
+version: 0.27
